# MaximumSubsequence

./: CMakeLists.txt
cmake/: FindCheck.cmake
src/: CMakeLists.txt  ParallelParser.c  ParallelParser.h
tests/: CMakeLists.txt  checkParallelParser.c
